# RSP_api

./: .coverage  .dockerignore  .gitignore  Dockerfile  Makefile  README.md  __init__.py  alembic.ini  alembic_test.ini  app.py  config.py  docker-compose-local.yaml  docker-compose-local.yml  docker-compose.yml  init.py  initialization.py  main.py  pyproject.toml  requirements.txt  schemas.py  settings.py  setup.py
api/: response_model.py  substances.py
api/handlers/users/: main.py  shemas.py
api/requests/: available_substances.py  calc_model_substanse.py  properties_list.py  property_table.py  property_table_row.py
api/requests/exception/: exception.py  exception_schemas.py
calculations/: helpers.py  router.py  schemas.py
core/: convert_params_in_si.py  get_params_in_SI.py  init.py
db/: dals.py  models.py  session.py
docker/: app.sh  test.sh
helpers/: constants.py  errors.py
migrations/: env.py
migrations/prod/versions/: 2120aa86499b_add_hasd_password.py  5976af395346_table_for_users.py  76e88a579c57_add_register_at_name_no_uniq.py
migrations/test/: env.py
migrations/test/versions/: 6a0931b342e5_test_migrations.py
migrations/versions/: 9f9c9bca00c9_create_table_for_users.py
models/: models.py  shemas.py
shemas/: model.py
src/: app.py  schemas.py
src/api/auth/: auth.py  database.py  router_auth.py  user_manger.py
src/api/substances_calc/: response_model.py  substances.py
src/api/users/: login_handlers.py  router_users.py  schemas.py  shemas.py  users.py  users_handlers.py  users_router.py
src/core/: convert_params.py  convert_params_in_si.py  get_params_in_SI.py  init.py
src/core/authentication/: backend.py  strategy.py
src/core/database/: dals.py  models.py  session.py
src/db/: dals.py  models.py
src/db/auth/: models.py
src/db/token/: access_token.py
src/helpers/: constants.py  hashing.py  help_func.py  letter_match_pattern.py  security.py
src/migrations/: env.py
test_package/: test_get_available_substances.py  test_get_properties_lists.py  test_get_property_table_row.py
tests/: test_calc_mode.py  test_get_available_substances.py  test_get_properties_lists.py
tests/property_table_row/: test_property_table_row_all.py
tests/property_table_row.py/: test_property_table_row_all.py  test_property_table_row_modeId.py
tests/propetry_table/: property_table.py  test_property_table.py
tests/substances/: test_get_properties_lists.py
tests/test_users/: conftest.py
(+46 files in other folders)
