[tool.poetry]
name = "rsp-api"
version = "0.1.0"
description = ""
authors = ["Evgeniy <kostyrkoevgeniy@yandex.ru>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10.12"
fastapi = "^0.111.0"
rsp = { git = "git+ssh://git@github-librsp/fiztexlabs/librsp.git" }
unicorn = { extras = ["standard"], version = "^2.0.1.post1" }
cmake = "^3.29.3"
setuptools = "^69.5.1"
sqlalchemy = "^2.0.30"
alembic = "^1.13.1"
psycopg2 = "^2.9.9"
asyncpg = "^0.29.0"
envparse = "^0.2.0"
pydantic = {extras = ["email"], version = "^2.7.1"}

[tool.poetry.group.dev.dependencies]


[build-system]

requires = ["poetry-core", "setuptools", "wheels", "setuptools-cpp"]
build-backend = "poetry.core.masonry.api"
