[tool.poetry]
name = "rsp-api"
version = "0.0.5"
description = ""
authors = ["Evgeniy <kostyrkoevgeniy@yandex.ru>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10.12"
fastapi = "^0.111.0"
unicorn = { extras = ["standard"], version = "^2.0.1.post1" }
setuptools = "^69.5.1"
unit-converter = "^1.1.0"
rsp = { git = "https://github.com/fiztexlabs/librsp.git" }
gunicorn = "^22.0.0"


[tool.poetry.group.dev.dependencies]
httpx = "^0.27.0"
pytest = "^8.2.2"


[build-system]

requires = ["poetry-core", "setuptools", "wheels", "setuptools-cpp"]
build-backend = "poetry.core.masonry.api"
