[tool.poetry]
name = "rsp-api"
version = "0.0.5"
description = ""
authors = ["Evgeniy <kostyrkoevgeniy@yandex.ru>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.8.10"
fastapi = "^0.111.0"
unicorn = { extras = ["standard"], version = "^2.0.1.post1" }
#setuptools = "^69.5.1"
unit-converter = "^1.1.0"
gunicorn = "^22.0.0"
sqlalchemy = "^2.0.30"
alembic = "^1.13.1"
psycopg2-binary = "^2.9.9"
asyncpg = "^0.29.0"
envparse = "^0.2.0"
pydantic = {extras = ["email"], version = "^2.7.1"}
fastapi-users = {extras = ["sqlalchemy"], version = "^13.0.0"}

#rsp = { git = "git+ssh://git@github-librsp/fiztexlabs/librsp.git" }
#rsp = { git = "git@github.com:fiztexlabs/librsp.git" }
#cmake = "^3.30.3"

[tool.poetry.dev-dependencies]
httpx = "^0.27.0"
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
bump-pydantic = "^0.8.0"


[build-system]

requires = ["poetry-core", "setuptools", "wheels", "setuptools-cpp"]
build-backend = "poetry.core.masonry.api"
